Finished the project

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -177,6 +177,7 @@ body {
     border-radius: 50%;
     border: 15px solid #F00;
     background-repeat: no-repeat;
+    padding: 20px;
 }
 
 .coming-soon-container-image-1 {
